fix: fixing scrolling on small screens

--- a/src/components/containers/Header/Header.scss
+++ b/src/components/containers/Header/Header.scss
@@ -7,6 +7,10 @@
   @media (max-width: 1550px){
     padding-bottom: 10px;
   }
+  @media (max-width: 1400px){
+    padding-bottom: 5px;
+    padding-top: 5px;
+  }
   @media (max-width: 768px) {
     border-bottom: none;
     padding-bottom: 15px;
