--- a/src/components/micro/Description/Description.scss
+++ b/src/components/micro/Description/Description.scss
@@ -10,5 +10,9 @@
     color: #111111;
     font-weight: 400;
     padding-left: 2px;
+
+    @media (max-width: 1400px){
+      font-size: 1rem;
+    }
   }
 }
