--- a/src/components/micro/Title/Title.scss
+++ b/src/components/micro/Title/Title.scss
@@ -13,5 +13,8 @@
     @media (max-width: 1550px){
       font-size: 2em;
     }
+    @media (max-width: 1400px){
+      font-size: 1.5em;
+    }
   }
 }
